--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,59 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/index.css">
-    <link rel="icon" href="../IMG/Logo.jpg" type="image/png">
-
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../CSS/index.css" />
+    <link rel="icon" href="../IMG/Logo.jpg" type="image/png" />
 
     <title>Portfolio</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-item" href="index.html">
-                        <img src="../IMG/image-removebg-preview.png" width="90px" alt="">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="skills.html">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contactme.html">Contact me</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-item" href="index.html">
+              <img
+                src="../IMG/image-removebg-preview.png"
+                width="90px"
+                alt=""
+              />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutme.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="skills.html">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactme.html">Contact me</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <div class="content">
-            <br>
-            <h1>Welcome!</h1>
-            <br>
-            <p>Hello, my name is Facundo Ríos and I am a potential software developer. Do you want to know more about
-                me?
-                Click on "About Me". If you are interested, contact me through my social networks that are in "Contact
-                me"
-            </p>
-            <br>
-            <img src="../IMG/Logo.jpg" width="200px" alt="">
-        </div>
+      <div class="content">
+        <br />
+        <h1>Welcome!</h1>
+        <br />
+        <p>
+          Hello, my name is Facundo Ríos and I am a potential software
+          developer. Do you want to know more about me? Click on "About Me". If
+          you are interested, contact me through my social networks that are in
+          "Contact me"
+        </p>
+        <br />
+        <img src="../IMG/Logo.jpg" width="200px" alt="" />
+      </div>
     </main>
-    <br><br>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    </div>
-</body>
-
+    <br /><br />
+    <footer>COPYRIGHT 2023</footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
