--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -1,65 +1,75 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/aboutme.css">
-    <link rel="icon" href="../IMG/Logo.jpg" type="image/png">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="icon" href="../IMG/Logo.jpg" type="image/png" />
     <title>Sobre mí</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-item" href="index.html">
-                        <img src="../IMG/image-removebg-preview.png" width="90px" alt="">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="skills.html">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contactme.html">Contact me</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-item" href="index.html">
+              <img
+                id="vector"
+                src="../IMG/image-removebg-preview.png"
+                width="90px"
+                alt=""
+              />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutme.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="skills.html">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactme.html">Contact me</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <br>
-<<<<<<< Updated upstream
-        <h1>Who I am?</h1>
-        <br>
-        <p>My full name is Ríos Jorge Facundo, I am from the capital city of Formosa, Argentina. At the moment
-            I am 18 years old and I am studying at the "Scientific Technological and Innovation Pole".
-            I'm just entering the world of programming, so I still have a lot to learn. My intention
-            It is always being able to learn even a little every day. I would like to highlight my commitment to the
-            jobs and my constant willingness to learn and help people. </p>
-=======
-        <h1>¿Who I am?</h1>
-        <br>
-        <p>My full name is Rios Jorge Facundo, I'm from the capital city of Formosa, Argentina. I'm currently 18 years old and studying at the 'Polo Científico Tecnológico y de Innovación'. I'm just starting to enter the world of programming, so I still have a lot to learn. My intention is always to be able to learn even a little bit every day. I would like to highlight my commitment to work and my constant willingness to learn and help people.</p>
->>>>>>> Stashed changes
-        <br>
-        <img src="../IMG/mifoto.jpg" width="200px" alt="mifoto">
+      <br />
+      <h1>Who I am?</h1>
+      <p>
+        My full name is Ríos Jorge Facundo, I am from the capital city of
+        Formosa, Argentina. At the moment I am 18 years old and I am studying at
+        the "Scientific Technological and Innovation Pole".
+      </p>
+      <p>
+        I'm just entering the world of programming, so I still have a lot to
+        learn. My intention It is always being able to learn even a little every
+        day. I would like to highlight my commitment to the jobs and my constant
+        willingness to learn and help people.
+      </p>
+      <img
+        src="../IMG/mifoto.jpg"
+        width="200px"
+        alt="mifoto"
+        style="border-radius: 100px"
+      />
     </main>
-    <br><br>
+    <br /><br />
     <footer>
-        <h1>
-            Copyright 2023
-        </h1>
+      <h1>Copyright 2023</h1>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
