--- a/HTML/contactme.html
+++ b/HTML/contactme.html
@@ -1,71 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/contactme.css">
-    <link rel="icon" href="../IMG/Logo.jpg" type="image/png">
-    <title>Contactme</title>
-</head>
-
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="icon" href="../IMG/Logo.jpg" type="image/png" />
+    <title>contactme</title>
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-item" href="index.html">
-                        <img src="../IMG/image-removebg-preview.png" width="90px" alt="">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="skills.html">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contactme.html">Contact me</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-item" href="index.html">
+              <img
+                id="vector"
+                src="../IMG/image-removebg-preview.png"
+                width="90px"
+                alt=""
+              />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutme.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="skills.html">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactme.html">Contact me</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-
     <main>
-        <br>
-<<<<<<< Updated upstream
-        <h1>Don't dude to talk to me!</h1>
-=======
-        <h1>Don't hesitate to talk to me!</h1>
->>>>>>> Stashed changes
-        <br>
-        <div class="container-text-center">
-            <div class="row">
-                <div class="col">
-                    <a href="https://instagram.com/facundorios._?igshid=ZGUzMzM3NWJiOQ=="><img src="../IMG/IG.png"
-                            width="100px" alt="">
-                    </a>
-                </div>
-                <div class="col">
-                    <a href=""><img src="../IMG/DISCORD ICON.png" width="90px" alt=""></a>
-                </div>
-                <div class="col">
-                    <a href="https://github.com/Facundorios05"><img src="../IMG/github.png" width="100px" alt=""></a>
-                </div>
-            </div>
+      <br />
+      <h1>Don't dude to talk to me!</h1>
+      <br />
+      <div class="container-text-center-2">
+        <div class="row">
+          <div class="col">
+            <a
+              href="https://instagram.com/facundorios._?igshid=ZGUzMzM3NWJiOQ=="
+              target="_blank"
+              ><img src="../IMG/IG.png" width="100px" alt="" />
+            </a>
+            <p>Instagram</p>
+          </div>
+          <div class="col">
+            <a href="https://discord.gg/RNPkAseu" target="_blank"
+              ><img src="../IMG/DISCORD ICON.png" width="90px" alt=""
+            /></a>
+            <p>Discord Server</p>
+          </div>
+          <div class="col">
+            <a href="https://github.com/Facundorios05" target="_blank"
+              ><img src="../IMG/github.png" width="100px" alt=""
+            /></a>
+            <p>github</p>
+          </div>
         </div>
+      </div>
     </main>
-    <br><br>
     <footer>
-        <h1>
-            Copyright 2023
-        </h1>
+      <h1>Copyright 2023</h1>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
